[tool.poetry]
name = "wawwod"
version = "0.8.0"
description = ""
authors = ["Zaffarelli <zaffarelli@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
django = "^2.2"
flake8 = "3.9.2"
django-libsass = "^0.8"
django-compressor = "^2.4.1"
django-colorfield = "^0.4.1"
django-mysql = "^3.11.1"
gunicorn = "^20.1.0"
django-fixture-magic = "^0.1.5"
django-gunicorn = "^0.1.1"
mysqlclient = "^2.0.3"
xhtml2pdf = "^0.2.5"
Markdown = "^3.3.4"
reportlab="3.6.6"
CairoSVG = "^2.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
