[project]
name = "wawwod"
version = "1.6.4"
description = "Zaffarelli's World Of Darkness assistant tool"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arabic-reshaper==3.0.0",
    "asgiref==3.11.0",
    "asn1crypto==1.5.1",
    "astral==2.0",
    "cairocffi==1.7.0",
    "cairosvg==2.9.0",
    "certifi==2024.7.4",
    "cffi==1.17.1",
    "chardet==5.2.0",
    "charset-normalizer==3.3.2",
    "click==8.1.7",
    "colours==0.3",
    "cryptography==42.0.7",
    "cssselect2==0.7.0",
    "defusedxml==0.7.1",
    "django==5.0.14",
    "django-appconf==1.2.0",
    "django-colorfield==0.14.0",
    "django-compressor==4.4",
    "django-fixture-magic==0.1.5",
    "django-libsass==0.9",
    "django-mysql==4.19.0",
    "html5lib==1.1",
    "idna==3.11",
    "libsass==0.23.0",
    "lxml==6.0.2",
    "markdown==3.8.1",
    "oscrypto==1.3.0",
    "pillow==12.1.1",
    "psycopg==3.3.2",
    "psycopg2-binary==2.9.11",
    "pycparser==2.23",
    "pyhanko==0.25.1",
    "pyhanko-certvalidator==0.26.8",
    "pypdf==6.9.2",
    "pypdf2==3.0.1",
    "pypng==0.20220715.0",
    "python-bidi==0.4.2",
    "pytz==2024.1",
    "pyyaml==6.0.1",
    "qrcode==7.4.2",
    "rcssmin==1.1.1",
    "reportlab==4.0.9",
    "requests==2.33.0",
    "rjsmin==1.2.1",
    "six==1.16.0",
    "sqlparse==0.5.4",
    "svglib==1.5.1",
    "tinycss2==1.3.0",
    "typing-extensions==4.12.0",
    "tzlocal==5.2",
    "uritools==4.0.2",
    "urllib3==2.6.3",
    "webencodings==0.5.1",
    "wheel==0.46.2",
    "xhtml2pdf==0.2.15",
]
